--- a/vite-checkers/src/styles/Home.css
+++ b/vite-checkers/src/styles/Home.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Istok Web", sans-serif;
   font-weight: bold;
-  font-size: medium;
+  font-size: large;
 }
 
 .home-container {
