--- a/vite-checkers/src/styles/SignUp.css
+++ b/vite-checkers/src/styles/SignUp.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -89,6 +90,6 @@ html, body {
   transition: color 0.3s; /* Smooth transition */
 }
 .signup-signin-link:hover {
-  color: #0056b3; 
-  text-decoration: underline; 
+  color: #0056b3;
+  text-decoration: underline;
 }
