--- a/vite-checkers/src/styles/SignUp.css
+++ b/vite-checkers/src/styles/SignUp.css
@@ -15,9 +15,9 @@ html, body {
 }
 
 .signup-container {
-  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+  background-color: rgba(255, 255, 255, 0.87); /* Semi-transparent background */
   padding: 2rem;
-  border-radius: 10px;
+  border-radius: 13px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
@@ -30,6 +30,7 @@ html, body {
 
 .signup-form-group {
   margin-bottom: 1rem;
+  font-size: 20px;
 }
 
 .signup-form-group label {
@@ -41,7 +42,7 @@ html, body {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 20px;
 }
 
 .signup-button-container {
@@ -49,18 +50,18 @@ html, body {
 }
 
 .signup-button {
-  width: 100%;
+  width: 50%;
   padding: 0.7rem;
-  background-color: #007bff;
+  background-color: #59BD49;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition */
 }
 
 .signup-button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+  background-color: #0a554e; /* Darker blue on hover */
   box-shadow: 0 4px 15px rgba(0, 123, 255, 0.5); /* Add shadow on hover */
 }
 
@@ -84,11 +85,46 @@ html, body {
 .signup-signin-link {
   text-align: center;
   margin-top: 1rem;
-  color: #007bff; /* Initial link color */
+  color: #000; /* Initial link color */
   text-decoration: none; /* Remove underline */
   transition: color 0.3s; /* Smooth transition */
 }
-.signup-signin-link:hover {
-  color: #0056b3; 
-  text-decoration: underline; 
+.signin-link{
+  color:#000000;
+  font: size 14px;
 }
+.signin-link:hover {
+  color: #0a7a93; /* Darker blue on hover */
+  text-decoration: underline; /* Underline on hover */
+}
+.password-input-wrapper {
+  position: relative;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #000; /* Icon color */
+  font-size: 1.2rem; /* Adjust size as needed */
+}
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
+  border-top: 4px solid #012449; /* Blue border */
+  border-radius: 50%;
+  width: 30px; /* Size of the spinner */
+  height: 30px; /* Size of the spinner */
+  animation: spin 1s linear infinite; /* Spin animation */
+  margin: 20px auto; /* Center the spinner */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
