--- a/vite-checkers/src/styles/SignUp.css
+++ b/vite-checkers/src/styles/SignUp.css
@@ -114,7 +114,7 @@ html, body {
 }
 .spinner {
   border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
-  border-top: 4px solid #012449; /* Blue border */
+  border-top: 4px solid #012449; 
   border-radius: 50%;
   width: 30px; /* Size of the spinner */
   height: 30px; /* Size of the spinner */
