--- a/vite-checkers/src/styles/SignUp.css
+++ b/vite-checkers/src/styles/SignUp.css
@@ -53,7 +53,7 @@ body {
 .signup-button {
   width: 50%;
   padding: 0.7rem;
-  background-color: #59BD49;
+  background-color: #59bd49;
   color: white;
   border: none;
   border-radius: 20px;
@@ -62,8 +62,8 @@ body {
 }
 
 .signup-button:hover {
-  background-color: #0a554e; /* Darker blue on hover */
-  box-shadow: 0 4px 15px rgba(0, 123, 255, 0.5); /* Add shadow on hover */
+  background-color: #2f6c26; /* Darker blue on hover */
+  box-shadow: 0 4px 15px #2f6c26; /* Add shadow on hover */
 }
 
 .signup-button:disabled {
@@ -90,12 +90,12 @@ body {
   text-decoration: none; /* Remove underline */
   transition: color 0.3s; /* Smooth transition */
 }
-.signin-link{
-  color:#000000;
+.signin-link {
+  color: #59bd49;
   font: size 14px;
 }
 .signin-link:hover {
-  color: #0a7a93; /* Darker blue on hover */
+  color: #2d4f31; /* Darker blue on hover */
   text-decoration: underline; /* Underline on hover */
 }
 .password-input-wrapper {
@@ -115,7 +115,7 @@ body {
 }
 .spinner {
   border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
-  border-top: 4px solid #012449; 
+  border-top: 4px solid #012449;
   border-radius: 50%;
   width: 30px; /* Size of the spinner */
   height: 30px; /* Size of the spinner */
@@ -124,8 +124,10 @@ body {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
-
