--- a/vite-checkers/src/styles/SignIn.css
+++ b/vite-checkers/src/styles/SignIn.css
@@ -93,3 +93,33 @@
   text-align: center;
   margin-top: 15px;
 }
+.password-input-container {
+  position: relative;
+}
+
+.password-toggle-button {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
+  border-top: 4px solid #0c0101; /* Top border color */
+  border-radius: 50%; /* Round shape */
+  width: 20px; /* Spinner size */
+  height: 20px; /* Spinner size */
+  animation: spin 1s linear infinite; /* Spin animation */
+  display: inline-block; /* Inline block for proper alignment */
+  margin-right: 5px; /* Space between spinner and text */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
