--- a/vite-checkers/src/styles/SignUp.css
+++ b/vite-checkers/src/styles/SignUp.css
@@ -113,7 +113,7 @@ body {
   color: #000; /* Icon color */
   font-size: 1.2rem; /* Adjust size as needed */
 }
-.spinner {
+.spinner-home {
   border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
   border-top: 4px solid #012449;
   border-radius: 50%;
