--- a/vite-checkers/src/styles/SignIn.css
+++ b/vite-checkers/src/styles/SignIn.css
@@ -1,7 +1,7 @@
 /* SignIn.css */
 
 .body1 {
-  background-image: url(../assets/signin.png);
+  background-image: url(../assets/sin.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -10,13 +10,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #ccc;
 }
 
 .signin-container {
   padding: 100px;
-  max-width: 700px;
+  height: 700px;
+  width: 700px;
   margin: 20px auto;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: rgba(0, 0, 0, 0.87);
   border-radius: 18px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -27,7 +29,7 @@
   font-size: 50px;
   margin-bottom: 20px;
   text-align: center;
-  color: #000000;
+  color: white;
   font-family: Arial, sans-serif;
   letter-spacing: 0.05em;
 }
@@ -39,12 +41,13 @@
 
 .signin-form-group {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom:100px;
 }
 
 .signin-form-group label {
   margin-bottom: 5px;
   font-weight: bold;
+  font-size: 25px;
 }
 
 .signin-form-group input {
@@ -52,6 +55,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 100%;
+  height: 50px;
 }
 
 .signin-button {
@@ -61,7 +65,7 @@
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 32px;
   transition: background-color 0.3s;
   width: 50%;
   display: block;
@@ -102,6 +106,7 @@
 }
 .password-input-container {
   position: relative;
+  margin-bottom: px;
 }
 
 .password-toggle-button {
